Set word-break: break-all to prevent editor overflow

--- a/app/assets/stylesheets/activeadmin/_quill_editor_input.scss
+++ b/app/assets/stylesheets/activeadmin/_quill_editor_input.scss
@@ -29,6 +29,7 @@ body.active_admin [data-aa-quill-editor] {
     max-height: 300px;
     min-height: 150px;
     padding: 10px;
+    word-break: break-all;
 
     ol {
       list-style-type: decimal;
